Proper HTML and has a paragraph

--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,12 @@
-<h1>Hello</h1>
+<html>
+<head>
+  <title>Howdy!</title>
+</head>
+<body>
+  <h1>Hello</h1>
+
+  <p>
+    This is a demo webpage
+  </p>
+</body>
+</html>
